--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 mybatis.config-locations=classpath:mybatis-config.xml
 mybatis.mapper-locations=classpath:mybatis/mapper/*.xml
-mybatis.type-aliases-package=com.yede.model.entity
+mybatis.type-aliases-package=com.yede.*.model.entity
 
 #spring.datasource.driverClassName = com.mysql.jdbc.Driver
 #spring.datasource.url = jdbc:mysql://localhost:3306/cwsm?useUnicode=true&characterEncoding=utf-8
